# edu

wasm/: cargo.ps1  configs.json  go.mod  go.sum  main.go
wasm/hello/: Cargo.toml  build.ps1
wasm/hello/src/: lib.rs  rules.rs
wasm/www/: index.html
