[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true # web-sys::console输出调试信息用

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"] # 必须有，否则转化不能成功
 
[dependencies]
wasm-bindgen = "0.2"
[dependencies.web-sys]
version = "0.3.57"
features = [
    "console"
]